--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,1 +1,3 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
+$family-sans-serif: 'Noto Sans Japanese', sans-serif;
 @import '~bulma/bulma';
