フォントの読み込み方法を変更した

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,2 @@
-@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
-$family-sans-serif: 'Noto Sans Japanese', sans-serif;
+$family-sans-serif: 'BIZ UDPGothic', sans-serif;
 @import '~bulma/bulma';
