デザインを微調整

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -23,6 +23,9 @@ $hero-body-padding-tablet: 6rem 3rem;
 .has-background-sand {
   background-color: #FAF6E9;
 }
+.has-border-top {
+  border-top: solid 2px $blue;
+}
 .has-border-bottom {
   border-bottom: solid 2px $blue;
 }
