--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,8 @@ $family-sans-serif: 'BIZ UDPGothic', sans-serif;
 $blue: #54BAB9;
 $teal: #9ED2C6;
 $green: #00796b;
+$red: #FF6363;
+//$red: #FF577F;
 $subtle: #e9e9e9;
 $paper: #FCF8F3;
 $sand: #F7ECDE;
@@ -18,7 +20,8 @@ $card-shadow: none;
 $card-header-shadow: none;
 $card-header-background-color: $sand;
 $card-header-padding: 0.75rem 1.5rem;
-$input-hover-border-color: $paper;
+$card-footer-border-top: none;
+$input-hover-border-color: $teal;
 $button-border-width: 2px;
 @import '~bulma/bulma';
 .lh-1 {
@@ -36,9 +39,6 @@ $button-border-width: 2px;
 .has-background-sand {
   background-color: $sand;
 }
-.has-border-top {
-  border-top: solid 2px $blue;
-}
 .has-border-sand-bottom {
   border-bottom: solid 2px $sand;
 }
@@ -47,9 +47,6 @@ $button-border-width: 2px;
 }
 .has-border-subtle-right {
   border-right: solid 1px $subtle;
-}
-.has-border-bottom-bold {
-  border-bottom: solid 4px $blue;
 }
 .is-size-6-half {
   font-size: 0.9rem;
