タイマーのフォントを等幅に変更した

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,5 @@
 $family-sans-serif: 'BIZ UDPGothic', sans-serif;
+$family-monospace: 'Source Code Pro', monospace;
 $blue: #54BAB9;
 $teal: #9ED2C6;
 $red: #FF5D5D;
