--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,12 +1,12 @@
 $family-sans-serif: 'BIZ UDPGothic', sans-serif;
 $family-monospace: 'Source Code Pro', monospace;
-$blue: #54BAB9;
-$teal: #9ED2C6;
+$blue: #00BCD4;
+$teal: #BAE5E5;
 $red: #FF5D5D;
-$pale: #F2F6F5;
-$subtle: #e9e9e9;
-$paper: #FCF8F3;
-$sand: #F7ECDE;
+$pale: #efefef;
+$subtle: #E9E9E9;
+$paper: #f6f6f6;
+$sand: #e0e0e0;
 $light: $subtle;
 $border: $sand;
 $link: $blue;
@@ -53,7 +53,7 @@ $button-border-width: 2px;
   border-top: solid 1px $subtle;
 }
 .hero-separator {
-  border: 2px solid $teal;
+  border: 3px solid $sand;
   width: 120px;
   margin: 2rem auto 3rem;
 }
