最新のロゴを反映した

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,6 @@
 $family-sans-serif: 'BIZ UDPGothic', sans-serif;
 $family-monospace: 'Source Code Pro', monospace;
-$blue: #00BCD4;
+$blue: #424242;
 $teal: #BAE5E5;
 $red: #FF5D5D;
 $pale: #efefef;
@@ -14,10 +14,11 @@ $primary: $blue;
 $text: #424242;
 $text-strong: $text;
 $radius: 0.5rem;
-$radius-large: 0.75rem;
+$radius-small: 0.4rem;
+$radius-large: 0.5rem;
 $title-color: $blue;
 $hero-body-padding-tablet: 6rem 3rem;
-$card-radius: 0.75rem;
+$card-radius: 0.5rem;
 $card-shadow: none;
 $card-header-shadow: none;
 $card-header-background-color: $sand;
