スタートを促すNotificationを表示するようにした

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -26,6 +26,7 @@ $modal-card-title-color: $text;
 $modal-card-head-background-color: $cloud;
 $modal-card-head-border-bottom: none;
 $modal-card-foot-border-top: none;
+$notification-radius: 0;
 $tile-spacing: 1.5rem;
 @import '~bulma/bulma';
 .select select {
@@ -59,6 +60,9 @@ $tile-spacing: 1.5rem;
 }
 .has-border-subtle-top {
   border-top: solid 1px $subtle;
+}
+.has-border-subtle-bottom {
+  border-bottom: solid 1px $subtle;
 }
 .has-text-navy {
   color: $navy;
