ストップウォッチの見た目を改善した

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,6 +22,9 @@ $hero-body-padding-tablet: 6rem 3rem;
 $footer-background-color: $cloud;
 $box-radius: $radius;
 $box-padding: 2.0rem;
+$button-static-color: $primary;
+$button-static-background-color: $cloud;
+$button-static-border-color: #fff;
 $modal-card-title-color: $text;
 $modal-card-head-background-color: $cloud;
 $modal-card-head-border-bottom: none;
