タッチデバイスにおける表示崩れを解消した

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -29,6 +29,7 @@ $modal-card-title-color: $text;
 $modal-card-head-background-color: $cloud;
 $modal-card-head-border-bottom: none;
 $modal-card-foot-border-top: none;
+$navbar-background-color: $primary;
 $notification-radius: 0;
 $tile-spacing: 1.5rem;
 @import '~bulma/bulma';
