--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,7 +6,7 @@ $blue: #3246D3;
 $teal: #14D2FF;
 $red: #fa5a7d;
 $snow: #F4F7F9;
-$myst: #F1F6FD;
+$mist: #F1F6FD;
 $cloud: #E3EBF7;
 $subtle: #E9E9E9;
 $primary: $blue;
