フッターにTwitterとGitHubへのリンクを追加した

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,6 +20,7 @@ $radius-small: 0.25rem;
 $radius: 0.5rem;
 $hero-body-padding-tablet: 6rem 3rem;
 $footer-background-color: $cloud;
+$footer-padding: 3rem;
 $box-radius: $radius;
 $box-padding: 2.0rem;
 $button-static-color: $primary;
