固定Navbarに対するマージンの設定方法を変更した

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -66,6 +66,10 @@ $notification-radius: 0;
   flex-direction: column;
 }
 
+.ht-wrapper__head {
+  margin-bottom: 78px;
+}
+
 .ht-wrapper__main {
   flex: 1;
 }
