試したこと削除ボタンの配色を変更した #217

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -30,6 +30,7 @@ $modal-card-head-border-bottom: none;
 $modal-card-foot-border-top: none;
 $navbar-background-color: $primary;
 $notification-radius: 0;
+$text-strong: #666;
 @import '~bulma/bulma';
 
 .select select {
