コピー・保存ボタンがウィンドウ下部に張り付くようにした #222

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -101,6 +101,12 @@ $text-strong: $zinc;
   }
 }
 
+.ht-sticky-buttons {
+  position: sticky;
+  bottom: 0;
+  padding: 1rem;
+}
+
 .ht-welcome-box {
   @include tablet {
     padding: 3rem;
